--- a/config.toml
+++ b/config.toml
@@ -88,7 +88,7 @@ copyright = "Imam Digmi"
     fancyboxCss = '<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/fancybox@3.1.20/dist/jquery.fancybox.min.css" integrity="sha256-7TyXnr2YU040zfSP+rEcz29ggW4j56/ujTPwjMzyqFY=" crossorigin="anonymous">'
 
   [params.busuanzi]         # count web traffic by busuanzi
-    enable = true
+    enable = false
     siteUV = true
     sitePV = true
     pagePV = true
