--- a/config.toml
+++ b/config.toml
@@ -62,6 +62,7 @@ copyright = "Imam Digmi"
   moreMeta = true
 
   # Some global options, you can also close or open something in front matter for a single post, see more information from `archetypes/default.md`.
+  reward: true
   comment= true
   toc = true
   autoCollapseToc = false   # Auto expand and collapse toc
