Change title site

--- a/config.toml
+++ b/config.toml
@@ -48,7 +48,7 @@ copyright = "Imam Digmi"
   since = "2017"            # Site creation time
 
   # site info (optional)
-  logoTitle = "imamdigmi"
+  logoTitle = "Imam Digmi"
   keywords = ["imamdigmi", "digmi", "blog", "JournalToday"]
   description = "Belajar adalah cara untuk menghargai waktu."
 
