--- a/config.toml
+++ b/config.toml
@@ -11,7 +11,7 @@ hasCJKLanguage = false
 paginate = 3
 disqusShortname = "imamdigmi"
 googleAnalytics = "UA-74531115-2"
-copyright = "Imam Digmi"
+copyright = "imamdigmi"
 
 [author]                  # essential
   name = "Imam Digmi"
