--- a/config.toml
+++ b/config.toml
@@ -4,7 +4,7 @@ languageCode = "en"
 defaultContentLanguage = "en"
 title = "JournalToday"
 enableRobotsTXT = true
-enableEmoji = true        # https://www.webpagefx.com/tools/emoji-cheat-sheet/
+enableEmoji = true # https://www.webpagefx.com/tools/emoji-cheat-sheet/
 theme = "even"
 
 hasCJKLanguage = true
@@ -13,15 +13,15 @@ disqusShortname = "imamdigmi"
 googleAnalytics = "UA-74531115-2"
 copyright = "imamdigmi"
 
-[author]                  # essential
+[author]
   name = "Imam Digmi"
 
-[sitemap]                 # essential
+[sitemap]
   changefreq = "weekly"
   priority = 0.5
   filename = "sitemap.xml"
 
-[[menu.main]]             # config your menu
+[[menu.main]]
   name = "Home"
   weight = 10
   identifier = "home"
@@ -44,21 +44,12 @@ copyright = "imamdigmi"
 
 [params]
   debug = false             # If true, load `eruda.min.js`. See https://github.com/liriliri/eruda
-
   since = "2017"            # Site creation time
-
-  # site info (optional)
   logoTitle = "Imam Digmi"
   keywords = ["imamdigmi", "digmi", "blog", "JournalToday"]
   description = "Belajar adalah cara untuk menghargai waktu."
-
-  # paginate of archives, tags and categories
   archive-paginate = 100
-
-  # The date format to use; for a list of valid formats, see https://gohugo.io/functions/format/
   dateFormatToUse = "2006-01-02"
-
-  # show word count and read time ?
   moreMeta = true
 
   # Some global options, you can also close or open something in front matter for a single post, see more information from `archetypes/default.md`.
@@ -67,12 +58,10 @@ copyright = "imamdigmi"
   autoCollapseToc = false   # Auto expand and collapse toc
   fancybox = true           # see https://github.com/fancyapps/fancybox
   bootcdn = false           # In china. @Deprecated: use [params.publicCDN]
-  mathjax = true           # see https://www.mathjax.org/
+  mathjax = true            # see https://www.mathjax.org/
   mathjaxEnableSingleDollar = false
   linkToMarkDown = false    # if you config contentCopyright and hugo output .md files. #
-
   contentCopyright = '<a rel="license noopener" href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target="_blank">CC BY-NC-ND 4.0</a>'
-
   changyanAppid = ""        # Changyan app id
   changyanAppkey = ""       # Changyan app key
   livereUID = ""            # LiveRe UID
