Change linkedin url

--- a/config.toml
+++ b/config.toml
@@ -93,7 +93,7 @@ copyright = "imamdigmi"
     b-stack-overflow = "https://stackoverflow.com/story/imamdigmi"
     c-twitter = "https://twitter.com/imamdigmi/"
     d-facebook = "https://facebook.com/imamdigmi/"
-    e-linkedin = "https://www.linkedin.com/in/imam-digmi-07307ab3/"
+    e-linkedin = "https://www.linkedin.com/in/imamdigmi"
     f-google = "https://plus.google.com/+imamdigmi"
     g-github = "https://github.com/imamdigmi/"
     m-instagram = "https://www.instagram.com/imamdigmi/"
