--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseURL = "https://imamdigmi.github.io/"
-publishDir = "docs"
+publishDir = "public"
 languageCode = "en"
 defaultContentLanguage = "en"
 title = "JournalToday"
