--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,15 @@
 dist: xenial
-language: go
-go:
-  - master
+language: python
+python: 3.7
+
+before_install:
+  - sudo apt-get update -qq
+  - sudo apt-get -yq install apt-transport-https
 
 install:
-  - go get github.com/gohugoio/hugo
-
-before_script:
-    - rm -rf public 2> /dev/null
+  - wget -qO- https://api.github.com/repos/gohugoio/hugo/releases/latest | sed -r -n '/browser_download_url/{/Linux-64bit.deb/{s@[^:]*:[[:space:]]*"([^"]*)".*@\1@g;p;q}}' | xargs wget
+  - sudo dpkg -i hugo*.deb
+  - rm -rf public 2> /dev/null
 
 script:
   - hugo
